# LangChain-RAG-AI-

./: .gitignore  README.md  pyproject.toml
ai_qa_agent/: FUTUREWORK.md  README.md  RULE.md
ai_qa_agent/SKILL/: SKILL.md
ai_qa_agent/SKILL/agents/: openai.yaml
ai_qa_agent/SKILL/references/: architecture.md  configuration.md  mcp.md
ai_qa_agent/SKILL/scripts/: validate_env.py
ai_qa_agent/data/: AI_master.docx  ai_knowledge.md  machine_learning.md  neural_network.md
ai_qa_agent/src/: main.py  mcp_server.py
ai_qa_agent/src/agents/: __init__.py  rag_agent.py
ai_qa_agent/src/chains/: __init__.py  rag_chain.py
ai_qa_agent/src/config/: __init__.py  settings.py
ai_qa_agent/src/memory/: __init__.py  chat_memory.py
ai_qa_agent/src/models/: __init__.py  embeddings.py  llm.py
ai_qa_agent/src/prompts/: __init__.py  rag_agent_prompt.txt  rag_chain_prompt.txt
ai_qa_agent/src/retrieval/: __init__.py  document_loader.py  ontology.py  vectorstore.py
ai_qa_agent/src/tools/: __init__.py  base_tool.py  knowledge_retriever.py
ai_qa_agent/ui/: app.py
