[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.30",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "mcp>=1.28.1",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pywin32>=312",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "torchvision>=0.23.0",
]
